# bull_shit_bingo

./: .gitignore  .pre-commit-config.yaml  README.md  bull_shit_bingo.tex  main.py  pyproject.toml
bull_shit_bingo/: bingo_table.py  io.py
input/: prompts.json  promts.json
output/: table.tex
