[tool.poetry]
name = "bull-shit-bingo"
version = "0.1.0"
description = ""
authors = ["MartinTritthart <martin.tritthart@student.tugraz.at>"]
readme = "README.md"
packages = [{include = "bull_shit_bingo"}]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.2"
pandas = "^2.1.4"
jinja2 = "^3.1.2"

[tool.nitpick]
style = [
  "github://MrP01/lint-me-now/nitpick-base-style.toml",
  "github://MrP01/lint-me-now/nitpick-python-style.toml",
]

[tool.black]
line-length = 120

[tool.ruff]
line-length = 120
select = ["I001"]
exclude = [".git", "**/__pycache__"]
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
